--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@
 h3{
   font-size: 3vw;
   margin-top: 0;
+  color: white;
 }
 .main{
   border: 1px solid black;
    display: flex;
+   
    flex-direction: column; 
    align-items: center;
    /* justify-content: center;  */
@@ -17,6 +19,7 @@ h3{
    margin-left: auto;
    width: 36vw;
    height: 57rem;
+   background-color: black;
 }
 .head{
   width: auto;
@@ -31,6 +34,7 @@ h3{
 .screen{
   width: 35vw;
   height: 15vh;
+  color: white;
 }
 .allButtons{
   margin-top: 1vw;
@@ -46,6 +50,7 @@ h3{
   border-radius: 48%;
   padding: 0;
   font-size: 2vw;
+  background-color: #575555;
 }
 .row{
   width: 35vw;
@@ -68,4 +73,12 @@ h3{
 }
 .answer{
   margin-right: 3vw;
+}
+.right{
+  background-color: #f69906;
+  color: white;
+}
+.top{
+  background-color: #b3b3b3;
+  color: #000000;
 }
