--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 /* *{
   border: 1px solid red;
 } */
-
+body{
+  margin-left: 0;
+  margin-top: 0;
+}
 h3{
   font-size: 3vw;
   margin-top: 0;
@@ -85,21 +88,29 @@ h3{
 @media (max-width: 600px) {
   .main{
     width: 100vw;
-    height: 45rem;
+    height: 100vh;
   }
   .row{
     width: 92vw;
   }
   .allButtons{
     gap: 6vh;
-    margin-top: -10vw;
+    margin-top: -40vw;
   }
   .screen{
-    height: 45vw;
+    margin-top: 10vh;
+    height: 40vh;
+    width: 50vw;
     font-size: 15vw;
   }
   .buttonStyle{
     width: 13vw;
     height: 13vw;
+    font-size: 7vw;
   }
+  .zero{
+    width: 30vw;
+  }
+
+  
 }
